tests/ui/generic-const-items/inference-failure.stderr
error[E0282]: type annotations needed
  --> $DIR/inference-failure.rs:8:13
   |
LL |     let _ = NONE;
   |             ^^^^ cannot infer type for type parameter `T` declared on the constant `NONE`

error[E0282]: type annotations needed
  --> $DIR/inference-failure.rs:12:13
   |
LL |     let _ = IGNORE;
   |             ^^^^^^ cannot infer type for type parameter `T` declared on the constant `IGNORE`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0282`.
